crates/klio-cfa/tests/snapshots/lower__elvis_lowering.snap
---
source: crates/klio-cfa/tests/lower.rs
expression: "lower_first_fun(\"fun main() {\n            val x: Int? = null\n            val y = x ?: 0\n        }\")"
---
cfg: entry=b0
exits: b1

b0:
  decl x : Unresolved
  r0 = eval @39..43 :: Unresolved
  assign x = r0
  decl y : Unresolved
  r1 = eval @64..65 :: Unresolved
  term: branch r1 -> b3 else b2

b1:
  preds: b4
  term: return

b2:
  preds: b0(F)
  assume r1 == null
  r2 = eval @69..70 :: Unresolved
  term: goto b4

b3:
  preds: b0(T)
  assume r1 != null
  term: goto b4

b4:
  preds: b2, b3
  r3 = eval @64..70 :: Unresolved
  assign y = r3
  term: goto b1
