crates/klio-cfa/tests/snapshots/lower__empty_body.snap
---
source: crates/klio-cfa/tests/lower.rs
expression: "lower_first_fun(\"fun main() { }\")"
---
cfg: entry=b0
exits: b1

b0:
  term: goto b1

b1:
  preds: b0
  term: return
