crates/klio-cfa/tests/snapshots/lower__not_null_assertion.snap
---
source: crates/klio-cfa/tests/lower.rs
expression: "lower_first_fun(\"fun main() {\n            val x: Int? = 1\n            val y = x!! + 1\n        }\")"
---
cfg: entry=b0
exits: b1

b0:
  decl x : Unresolved
  r0 = eval @39..40 :: Unresolved
  assign x = r0
  decl y : Unresolved
  r1 = eval @61..62 :: Unresolved
  assume r1 != null
  assert r1
  r2 = eval @67..68 :: Unresolved
  r3 = eval @61..68 :: Unresolved
  assign y = r3
  term: goto b1

b1:
  preds: b0
  term: return
