crates/klio-cfa/tests/snapshots/lower__short_circuit_and.snap
---
source: crates/klio-cfa/tests/lower.rs
expression: "lower_first_fun(\"fun main() {\n            val a = true\n            val b = false\n            val c = a && b\n        }\")"
---
cfg: entry=b0
exits: b1

b0:
  decl a : Unresolved
  r0 = eval @33..37 :: Unresolved
  assign a = r0
  decl b : Unresolved
  r1 = eval @58..63 :: Unresolved
  assign b = r1
  decl c : Unresolved
  r2 = eval @84..85 :: Unresolved
  term: branch r2 -> b2 else b3

b1:
  preds: b3
  term: return

b2:
  preds: b0(T)
  assume r2
  r3 = eval @89..90 :: Unresolved
  term: goto b3

b3:
  preds: b0(F), b2
  assume !r2
  r4 = eval @84..90 :: Unresolved
  assign c = r4
  term: goto b1
