crates/klio-cfa/tests/snapshots/lower__straight_line_assignment.snap
---
source: crates/klio-cfa/tests/lower.rs
expression: "lower_first_fun(\"fun main() {\n            val x = 1\n            val y = x + 2\n        }\")"
---
cfg: entry=b0
exits: b1

b0:
  decl x : Unresolved
  r0 = eval @33..34 :: Unresolved
  assign x = r0
  decl y : Unresolved
  r1 = eval @55..56 :: Unresolved
  r2 = eval @59..60 :: Unresolved
  r3 = eval @55..60 :: Unresolved
  assign y = r3
  term: goto b1

b1:
  preds: b0
  term: return
