crates/klio-cfa/tests/snapshots/lower__while_loop.snap
---
source: crates/klio-cfa/tests/lower.rs
expression: "lower_first_fun(\"fun main() {\n            var i = 0\n            while (i < 10) {\n                i = i + 1\n            }\n        }\")"
---
cfg: entry=b0
exits: b1

b0:
  decl i : Unresolved
  r0 = eval @33..34 :: Unresolved
  assign i = r0
  term: goto b2

b1:
  preds: b4
  term: return

b2:
  preds: b0, b3
  r1 = eval @54..55 :: Unresolved
  r2 = eval @58..60 :: Unresolved
  r3 = eval @54..60 :: Unresolved
  term: branch r3 -> b3 else b4

b3:
  preds: b2(T)
  assume r3
  r4 = eval @84..85 :: Unresolved
  r5 = eval @88..89 :: Unresolved
  r6 = eval @84..89 :: Unresolved
  assign i = r6
  r7 = eval @62..103 :: Unresolved
  backedge l0
  term: goto b2

b4:
  preds: b2(F)
  assume !r3
  r8 = eval @47..103 :: Unresolved
  term: goto b1
